recursion.logo.sierpinski.Sierpinski.scala.error
Compilation error:
Sierpinski:1: error: '(' expected but identifier found.
  for i<- 0 to level-1{
      ^Sierpinski:13: error: illegal start of simple expression
} 
^